eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-flask-service
spec:
  type: LoadBalancer
  selector:
    app: eks
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
