eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-flask-ingress
  annotations:
       kubernetes.io/ingress.class: alb
  labels:
    name: my-flask-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-flask-ingress
            port: 
              number: 8080
